--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 # See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
-name = "my-package"
+name = "recursiveimport"
 dynamic = ["version"]
 readme = "README.md"
 classifiers = [
-    "Intended Audience :: Science/Research",
-    "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Programming Language :: Python :: 3"
 ]
 authors = [
-    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
+    {name = "Alessio Lombardi", email = "mail@alelom.com"}
 ]
 requires-python = ">=3.8"
 dependencies = [
@@ -31,23 +28,7 @@ Changelog = "https://github.com/alelom/python-importall/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
-    "ruff",
     "mypy>=1.0,<2.0",
-    "black>=23.0,<25.0",
-    "isort>=5.12,<5.14",
-    "pytest",
-    "pytest-sphinx",
-    "pytest-cov",
-    "twine>=1.11.0",
-    "build",
-    "setuptools",
-    "wheel",
-    "Sphinx>=6.0,<9.0",
-    "furo==2024.8.6",
-    "myst-parser>=1.0",
-    "sphinx-copybutton",
-    "sphinx-autobuild",
-    "sphinx-autodoc-typehints==3.0.0",
     "packaging"
 ]
 
@@ -65,10 +46,10 @@ exclude = [
 include-package-data = true
 
 [tool.setuptools.package-data]
-my_package = ["py.typed"]
+recursiveimport = ["py.typed"]
 
 [tool.setuptools.dynamic]
-version = {attr = "my_package.version.VERSION"}
+version = {attr = "recursiveimport.version.VERSION"}
 
 [tool.black]
 line-length = 100
