--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,23 @@ Changelog = "https://github.com/alelom/python-importall/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
+    "ruff",
     "mypy>=1.0,<2.0",
+    "black>=23.0,<25.0",
+    "isort>=5.12,<5.14",
+    "pytest",
+    "pytest-sphinx",
+    "pytest-cov",
+    "twine>=1.11.0",
+    "build",
+    "setuptools",
+    "wheel",
+    "Sphinx>=6.0,<9.0",
+    "furo==2024.8.6",
+    "myst-parser>=1.0",
+    "sphinx-copybutton",
+    "sphinx-autobuild",
+    "sphinx-autodoc-typehints==3.0.0",
     "packaging"
 ]
 
