--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Programming Language :: Python :: 3"
 ]
 authors = [
-    {name = "Alessio Lombardi", email = "mail@alelom.com"}
+    {name = "Alessio Lombardi"}
 ]
 requires-python = ">=3.8"
 dependencies = [
