--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 # See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
-name = "recursiveimport"
+name = "sysappend"
 dynamic = ["version"]
 readme = "README.md"
 classifiers = [
@@ -62,10 +62,10 @@ exclude = [
 include-package-data = true
 
 [tool.setuptools.package-data]
-recursiveimport = ["py.typed"]
+sysappend = ["py.typed"]
 
 [tool.setuptools.dynamic]
-version = {attr = "recursiveimport.version.VERSION"}
+version = {attr = "sysappend.version.VERSION"}
 
 [tool.black]
 line-length = 100
